--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
-        <script src="/button/script.js"></script>
-        <link rel="stylesheet" href="/button/style.css">
+        <script src="/script.js"></script>
+        <link rel="stylesheet" href="/style.css">
         
     </head>
     
