--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     
     <body>
+        <p id="score">Score : 0</p>
         <button onclick="changePosition()" id="b" style="top: 50%;"></button>
     </body>
 </html>
